alterações de referencias
Alteração das logos e referencias para iternyxvpn

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Iternyx VPN",
-  "version": "0.0.3",
+  "name": "iternyxvpn",
+  "version": "0.0.1",
   "author": "The Hosting Company",
   "description": "Iternyx VPN Client.",
   "homepage": "https://www.iternyx.com",
